Cambios menores en Cap1

--- a/2021-1/apunte/Cap.01.tex
+++ b/2021-1/apunte/Cap.01.tex
@@ -7,7 +7,7 @@ En este curso no nos preocupamos demasiado por el significado lógico y filosóf
 
 El punto de vista adoptado en este apunte es el señalado antes. Aceptamos sin reparo que existe un conjunto de objetos llamados \textit{enteros} conteniendo los enteros positivos y los negativos, y el cero, familiares en nuestra temprana educación y experiencia. El conjunto de enteros se denotará por el símbolo especial ${\mathbb Z}$. Las propiedades de ${\mathbb Z}$ serán dadas por una lista de axiomas, a partir de las cuales seremos capaces de deducir todos los resultados sobre números enteros que necesitaremos en las cuestiones subsiguientes. Empezaremos listando aquellos axiomas que tratan la suma y la multiplicación.
 
-Adoptaremos las notaciones usuales $a+b$ para la suma de dos enteros $a$ y $b$, y $a \cdot b$ (frecuentemente $ab$ o también $a \times b$) para su producto. Pensamos en $+$ y $\cdot$ como \textit{operaciones} que a un par de enteros $a$ y $b$ les hacen corresponder un entero $a+b$ y otro $a\cdot b$. El hecho de que $a \cdot b$ y $a+b$ son enteros, y no algún objeto extra\~no como elefantes, es nuestra primera suposición axioma (\textbf{I1}).     
+Adoptaremos las notaciones usuales $a+b$ para la suma de dos enteros $a$ y $b$, y $a \cdot b$ (frecuentemente $ab$ o también $a \times b$) para su producto. Pensamos en $+$ y $\cdot$ como \textit{operaciones} que a un par de enteros $a$ y $b$ les hacen corresponder un entero $a+b$ y otro $a\cdot b$. El hecho de que $a \cdot b$ y $a+b$ son enteros, y no algún objeto extra\~no como elefantes, es nuestra primera suposición, el axioma \ref{axioma-i1}.     
 
 En la siguiente lista de axiomas $a$, $b$, $c$ denotan enteros arbitrarios, y $0$ y $1$ denotan enteros especiales que cumplen las propiedades especificadas más abajo.
 
@@ -23,7 +23,7 @@ En la siguiente lista de axiomas $a$, $b$, $c$ denotan enteros arbitrarios, y $0
 \end{enumerate}
 
 
-Debido a la ley de asociatividad para la suma axioma (\textbf{I3}) $(a+b)+c$ es igual a $a+(b+c)$ y por lo tanto podemos eliminar los paréntesis sin ambigüedad. Es decir, denotamos
+Debido a la ley de asociatividad para la suma, axioma \ref{axioma-i3}, $(a+b)+c$ es igual a $a+(b+c)$ y por lo tanto podemos eliminar los paréntesis sin ambigüedad. Es decir, denotamos
 $$
 a+b+c := (a+b)+c = a+(b+c).
 $$
@@ -31,7 +31,7 @@ De forma análoga, usaremos la notación
 $$
 abc = (ab)c = a(bc).
 $$
-Debido a la ley de conmutatividad axioma (\textbf{I2}), es claro que  del axioma (\textbf{I4}) se deduce que  $0+a=a+0=a$ y $1\cdot a = a\cdot 1=a$. Análogamente,  por  (\textbf{I2}) e  (\textbf{I6}) obtenemos que  $-a+a =    a+(-a)=0$.
+Debido a la ley de conmutatividad, axioma \ref{axioma-i2}, es claro que  del axioma \ref{axioma-i4} se deduce que  $0+a=a+0=a$ y $1\cdot a = a\cdot 1=a$. Análogamente,  por  \ref{axioma-i2} e  \ref{axioma-i6} obtenemos que  $-a+a =    a+(-a)=0$.
 
 Una propiedad que debemos mencionar es la siguiente: si $a,b, c \in \mathbb Z$  y $a=b$, entonces $a+c = b+c$ y $ac = bc$. Esto se debe a que la suma y el producto son operaciones que, como acabamos de decir, toman un par de enteros y  devuelven otro entero. Si $a=b$, entonces el  par $a,c$ es igual al par $b,c$ y por lo tanto devuelven la misma suma y el mismo producto. Esta propiedad no es un axioma, sino  una mera aplicación de la lógica formal. 
   
@@ -40,10 +40,10 @@ Todos los axiomas corresponden a propiedades familiares de los  enteros que apre
 \begin{ejemplo}\label{Ej.opuesto_opuesto} Demostremos que, para todo $n$ entero, el opuesto de $-n$ es $n$, es decir que 
 $$-(-n) = n.$$ 
 \end{ejemplo}
-\begin{proof} El axioma (\textbf{I6}) nos dice que $-(-n)$ es el único número que sumado a $-n$, da cero.  Por lo tanto, para demostrar que $-(-n) = n$ basta ver que $(-n)+n=0$. Esto se cumple puesto que 
+\begin{proof} El axioma \ref{axioma-i6} nos dice que $-(-n)$ es el único número que sumado a $-n$, da cero.  Por lo tanto, para demostrar que $-(-n) = n$ basta ver que $(-n)+n=0$. Esto se cumple puesto que 
 \begin{alignat*}2
-(-n)+n&=n+(-n) &\qquad &\text{axioma (\textbf{I2})} \\
-&=0&\qquad &\text{axioma (\textbf{I6})}
+(-n)+n&=n+(-n) &\qquad &\text{axioma \ref{axioma-i2}} \\
+&=0&\qquad &\text{axioma \ref{axioma-i6}}
 \end{alignat*}
 Por lo tanto  $(-n)+n=0$.
 \end{proof}
@@ -68,7 +68,7 @@ Tanto formalismo, como el usado en las  demostraciones realizadas en el ejemplo 
 
 
 
-\begin{ejemplo*} Supongamos que existen dos enteros $0$ y $0'$ ambos cumpliendo el  axioma (\textbf{I4}), esto es
+\begin{ejemplo*} Supongamos que existen dos enteros $0$ y $0'$ ambos cumpliendo el  axioma \ref{axioma-i4}, esto es
 $$
 a+0= a, \qquad a+0'=a
 $$
@@ -76,14 +76,14 @@ para todo $a$ de $\mathbb Z$.  Entonces $0= 0'$.
 \end{ejemplo*}
 \begin{proof}
 \begin{alignat*}2
-0 &= 0 + 0'&\qquad &\text{axioma (\textbf{I4}) aplicado a $0$ y con $0'$ como neutro} \\
-&=0'+0&\qquad &\text{axioma (\textbf{I2})}\\
-&= 0' &\qquad &\text{axioma (\textbf{I4}) aplicado a $0'$ y con $0$ como neutro}.
+0 &= 0 + 0'&\qquad &\text{axioma \ref{axioma-i4} aplicado a $0$ y con $0'$ como neutro} \\
+&=0'+0&\qquad &\text{axioma \ref{axioma-i2}}\\
+&= 0' &\qquad &\text{axioma \ref{axioma-i4} aplicado a $0'$ y con $0$ como neutro}.
 \end{alignat*}
 \end{proof}
 
 
-El ejemplo anterior nos demuestra que hay un único elemento elemento que cumple el axioma (\textbf{I4}) en lo que respecta a la suma. A este elemento lo denotamos $0$ y lo denominamos el {\em elemento neutro de la suma}. Lo mismo podemos probar con el elemento neutro respecto al producto (ver ejercicio \ref{ej-elem-neutro-prod}),  es decir hay un único elemento,  denotado 1, que satisface el axioma (\textbf{I4}) en lo que se refiere al producto. A  este elemento lo llamamos el {\em elemento neutro del producto}.  
+El ejemplo anterior nos demuestra que hay un único elemento elemento que cumple el axioma \ref{axioma-i4} en lo que respecta a la suma. A este elemento lo denotamos $0$ y lo denominamos el {\em elemento neutro de la suma}. Lo mismo podemos probar con el elemento neutro respecto al producto (ver ejercicio \ref{ej-elem-neutro-prod}),  es decir hay un único elemento,  denotado 1, que satisface el axioma \ref{axioma-i4} en lo que se refiere al producto. A  este elemento lo llamamos el {\em elemento neutro del producto}.  
 
 \begin{ejemplo*} (Regla de los signos) Veamos que  si $a,b \in \mathbb Z$ entonces
 $$
@@ -95,11 +95,11 @@ Veremos que  $a(-b) = -(ab)$. Los otros casos se dejan como ejercicio para el le
 
 Una forma de demostrar este caso es  observando que $-(ab)$ es el inverso aditivo de $ab$ y comprobando que $a(-b)$ es también inverso aditivo de $ab$. Luego, por unicidad del inverso aditivo, de deduce que $a(-b) = -(ab)$. 
 \begin{alignat*}2
-ab + a(-b) &=a(b-b) &\qquad &\text{axioma (\textbf{I5})} \\
-&=a0 &\qquad &\text{axioma (\textbf{I4})}\\
+ab + a(-b) &=a(b-b) &\qquad &\text{axioma \ref{axioma-i5}} \\
+&=a0 &\qquad &\text{axioma \ref{axioma-i4}}\\
 &= 0 &\qquad &\text{ejercicio \ref{ej0a}}.
 \end{alignat*}
-Es decir $a(-b)$ es el inverso aditivo de $ab$, luego por la unicidad del inverso aditivo axioma (\textbf{I6}), $a(-b)=-(ab)$.
+Es decir $a(-b)$ es el inverso aditivo de $ab$, luego por la unicidad del inverso aditivo axioma \ref{axioma-i6}, $a(-b)=-(ab)$.
 \end{proof}
 
 
@@ -114,7 +114,7 @@ Algunos resultados similares pueden encontrarse en los siguientes ejercicios. Co
 \item Como siempre $x^2$ denota $x\cdot x$. Demostrar que dados dos enteros $a$ y $b$ tal que $a+b \not=0$, entonces existe un único $c$ tal que $(a+b)c=
 a^2 - b^2$.
 
-\item \label{ej-elem-neutro-prod}Probar que hay un único elemento neutro del producto.
+\item \label{ej-elem-neutro-prod} Probar que hay un único elemento neutro del producto.
 
 \item \label{ej0a}
 La siguiente es una demostración de la fórmula $0x=0$ usando solo los axiomas planteados antes. Escribir la demostración completa, explicando que axioma es usado en cada paso.
@@ -141,6 +141,7 @@ El orden natural de los enteros es tan importante como sus propiedades aritméti
 Solo cuatro axiomas se necesitan para especificar las propiedades básicas del símbolo $<$ , y ellos son listados en lo que sigue. La numeración de los axiomas se continúa de la sección \ref{seccion-aritmetica}. Como antes, $a$, $b$ y $c$ denotan enteros arbitrarios.
 
 \begin{enumerate}[label=\textbf{I\arabic*)}, ref=\textbf{I\arabic*}]
+    \setcounter{enumi}{7}
     \item \label{axioma-i8} {\em Ley de tricotomía.}\, Vale una y sólo una de las relaciones
 siguientes:
 $$
@@ -152,13 +153,13 @@ $$
 \end{enumerate}
 
 
-Esta claro que podemos definir los otros símbolos de orden $>$, $\le$ y $\ge$, en términos de los símbolos $<$ e $=$. Diremos que $m>n$ si  $n<m$, diremos que $m \le n$ si $m<n$ o $m=n$. Finalmente, diremos que $m \ge n$ si $m > n$ o $m=n$.  Es importante notar que el  axioma (\textbf{I11}) tiene una versión valedera para estos nuevos símbolos.
+Esta claro que podemos definir los otros símbolos de orden $>$, $\le$ y $\ge$, en términos de los símbolos $<$ e $=$. Diremos que $m>n$ si  $n<m$, diremos que $m \le n$ si $m<n$ o $m=n$. Finalmente, diremos que $m \ge n$ si $m > n$ o $m=n$.  Es importante notar que el  axioma \ref{axioma-i11} tiene una versión valedera para estos nuevos símbolos.
 \begin{enumerate}[label=\textit{\alph*)}]
 \item \textbf{($>$)} Si $a > b$ y $c>0$, entonces $ac > bc$.
 \item \textbf{($\le$)} Si $a \le b$ y $0 \le c$, entonces $ac \le bc$.
 \item \textbf{($\ge$)} Si $a\ge b$ y $c\ge 0$, entonces $ac \ge bc$.
 \end{enumerate}
-Usando las definiciones de $\ge$, $<$, $>$ y el axioma (\textbf{I11}) original es muy sencillo demostrar estas variantes. Por otro lado,
+Usando las definiciones de $\ge$, $<$, $>$ y el axioma \ref{axioma-i11} original es muy sencillo demostrar estas variantes. Por otro lado,
 
 \begin{proposicion}\label{prop-compatibilidad-negativa}
     Sean $a, b, c \in \Z$.  
@@ -171,13 +172,13 @@ Usando las definiciones de $\ge$, $<$, $>$ y el axioma (\textbf{I11}) original e
     
     \ref{it.cmenor0} Sumando $-c$ a ambos miembros de la desigualdad $c < 0$, obtenemos $c + (-c) < 0 + (-c)$ (compatibilidad de la suma con la relación de orden). Por los axiomas de inverso aditivo y elemento neutro, la expresión se reduce a $0 < -c$.
     
-    \ref{it.amenorb} Como $a < b$, si sumamos a ambos miembros de la desigualdad $-a -b$, por la compatibilidad  de la suma con $<$, obtenemos $a -a -b < b -a -b$ y por la aplicación reiterada de los axiomas de inverso aditivo y elemento neutro  obtenemos $-b < -a$. Por a) sabemos que $0< -c$, por lo tanto, por \textbf{I11)}, $(-b)(-c) < (-a)(-c)$. Aplicando la regla de los signos obtenemos $bc < ac$ y por lo tanto $ac > bc$.
+    \ref{it.amenorb} Como $a < b$, si sumamos a ambos miembros de la desigualdad $-a -b$, por la compatibilidad  de la suma con $<$, obtenemos $a -a -b < b -a -b$ y por la aplicación reiterada de los axiomas de inverso aditivo y elemento neutro  obtenemos $-b < -a$. Por a) sabemos que $0< -c$, por lo tanto, por \ref{axioma-i11}, $(-b)(-c) < (-a)(-c)$. Aplicando la regla de los signos obtenemos $bc < ac$ y por lo tanto $ac > bc$.
 
 \end{proof}
 
-Ya hemos usado (en axioma \textbf{I4}) el símbolo $\not=$ que denota  ``{\em no} es igual a '' o bien ``es distinto a''.   En  general, cuando tachemos un símbolo, estamos indicando la negación de la relación que define. Por ejemplo, $a\not< b$ denota ``$a$ {\em no} es menor que $b$''. 
+Ya hemos usado (en axioma \ref{axioma-i4}) el símbolo $\not=$ que denota  ``{\em no} es igual a '' o bien ``es distinto a''.   En  general, cuando tachemos un símbolo, estamos indicando la negación de la relación que define. Por ejemplo, $a\not< b$ denota ``$a$ {\em no} es menor que $b$''. 
 
-\begin{observacion*} Demostremos que  $a\not< b$ es equivalente a $a\ge b$: por la ley de tricotomía axioma (\textbf{I8}) tenemos que solo vale una y solo una de las siguientes afirmaciones
+\begin{observacion*} Demostremos que  $a\not< b$ es equivalente a $a\ge b$: por la ley de tricotomía axioma \ref{axioma-i8} tenemos que solo vale una y solo una de las siguientes afirmaciones
 $$
 a<b, \qquad a = b, \qquad b < a.
 $$
@@ -204,7 +205,7 @@ Demostremos las siguiente propiedades de $\le$. Sean  $a$, $b$ y $c$  enteros ar
 %\vskip .2cm
 (\textbf{O3}) Como $a\le b$, entonces $a <b$ o bien $a=b$. Como $b\le c$, entonces $b<c$ o bien $b=c$. Para hacer la demostración, debemos pensar en todas las posibles combinaciones de estas afirmaciones:
 \begin{itemize}
-    \item $a<b$ y $b<c$. Es este caso, por  (\textbf{I9}), $a<c$. Luego $a\le c$.
+    \item $a<b$ y $b<c$. Es este caso, por  \ref{axioma-i9}, $a<c$. Luego $a\le c$.
     
     \item $a<b$ y $b=c$. Luego $a<c$ y eso implica que $a\le c$.
     
@@ -237,12 +238,12 @@ $$
 
 
 Nuestro último axioma para $\mathbb Z$ afirma algo que es (aparentemente) una propiedad obvia.
-
-\begin{enumerate}
-\item[\textbf{I12)}] Si $X$ es un subconjunto de $\mathbb Z$ que no es vacío y tiene una cota inferior, entonces $X$ tiene un mínimo.
+\begin{enumerate}[label=\textbf{I\arabic*)}, ref=\textbf{I\arabic*}]
+    \setcounter{enumi}{11}
+    \item \label{axioma-i12} Si $X$ es un subconjunto de $\mathbb Z$ que no es vacío y tiene una cota inferior, entonces $X$ tiene un mínimo.
 \end{enumerate}
 
-El axioma (\textbf{I12}) es conocido como el {\em axioma del buen orden}\index{axioma del buen orden} o {\em principio de buena ordenación}\index{principio de buena ordenación}.  Una buena forma de entender su significado es considerar $X$ un conjunto de enteros acotado inferiormente  y un juego en el cual dos personas eligen alternativamente un elemento de $X$, sujetos a la regla de que cada número debe ser estrictamente menor que el anterior. El axioma nos dice que cuando los números son enteros, el juego terminará; además el final se producirá cuando uno de los jugadores tenga el buen sentido de elegir el mínimo. Esta propiedad aparentemente obvia \textit{no} se mantiene necesariamente cuando tratamos con números que no son enteros, pues $X$ puede no tener un mínimo aunque tenga una cota inferior. Por ejemplo supongamos que $X$ es el conjunto de fracciones $3/2, 4/3, 5/4, \ldots$ teniendo por forma general $(n+1)/n$, $n\ge 2$. Este conjunto tiene una cota inferior ($1$, por ejemplo) pero no tiene mínimo y por lo tanto los jugadores podrían seguir jugando para siempre, eligiendo fracciones más y más cercanas a $1$.
+El axioma \ref{axioma-i12} es conocido como el  \textit{axioma de buena ordenación}  o  \textit{axioma del buen orden}\index{axioma del buen orden} o \textit{principio de buena ordenación}\index{principio de buena ordenación}.  Una buena forma de entender su significado es considerar $X$ un conjunto de enteros acotado inferiormente  y un juego en el cual dos personas eligen alternativamente un elemento de $X$, sujetos a la regla de que cada número debe ser estrictamente menor que el anterior. El axioma nos dice que cuando los números son enteros, el juego terminará; además el final se producirá cuando uno de los jugadores tenga el buen sentido de elegir el mínimo. Esta propiedad aparentemente obvia \textit{no} se mantiene necesariamente cuando tratamos con números que no son enteros, pues $X$ puede no tener un mínimo aunque tenga una cota inferior. Por ejemplo supongamos que $X$ es el conjunto de fracciones $3/2, 4/3, 5/4, \ldots$ teniendo por forma general $(n+1)/n$, $n\ge 2$. Este conjunto tiene una cota inferior ($1$, por ejemplo) pero no tiene mínimo y por lo tanto los jugadores podrían seguir jugando para siempre, eligiendo fracciones más y más cercanas a $1$.
 
 El axioma del buen orden nos da una justificación firme para nuestro intuitivo dibujo de los enteros: un conjunto de puntos regularmente espaciados sobre una linea recta, que se extiende indefinidamente en ambas direcciones como en la Fig. \ref{f1.2}. En particular dice que no podemos acercarnos más y más a un entero sin alcanzarlo, de forma que el dibujo de la Fig. \ref{f1.3} no es correcto.
 
@@ -276,17 +277,17 @@ El siguiente resultado es obvio, pero  debe ser demostrado. Sin embargo,  la dem
 \begin{proposicion}\label{prop-0-menor-que-1}
 $1$ es el menor entero mayor que $0$.
 \end{proposicion}
-\begin{proof}[Demostración (*)] Primero debemos probar que $0 < 1$. Ahora bien, como $0 \not= 1$ (por axioma \textbf{I4}), por la ley de tricotomía (axioma \textbf{I8}), debe ocurrir que $0 < 1$ o $ 1 < 0$. Supongamos que $1 < 0$, luego por proposición \ref{prop-compatibilidad-negativa}, $1 \cdot 1 > 1 \cdot 0$. Como $1$  es elemento neutro de la multiplicación, obtenemos $1 > 0$, que contradice nuestra suposición. Esta contradicción vino de suponer que $1 < 0$. Por lo tanto, $0 < 1$.
+\begin{proof}[Demostración (*)] Primero debemos probar que $0 < 1$. Ahora bien, como $0 \not= 1$ (por axioma \ref{axioma-i4}), por la ley de tricotomía (axioma \ref{axioma-i8}), debe ocurrir que $0 < 1$ o $ 1 < 0$. Supongamos que $1 < 0$, luego por proposición \ref{prop-compatibilidad-negativa}, $1 \cdot 1 > 1 \cdot 0$. Como $1$  es elemento neutro de la multiplicación, obtenemos $1 > 0$, que contradice nuestra suposición. Esta contradicción vino de suponer que $1 < 0$. Por lo tanto, $0 < 1$.
 
 Probaremos ahora que no existe $a$ entero tal que $ 0<a<1$ y lo haremos por el absurdo: supongamos que existe $a \in \mathbb Z$ tal que $0<a<1$ y sea 
 $$
 X=\{a\in\mathbb Z: 0<a<1\}.
 $$
-La  suposición que hicimos implica que $X$ es no vacío.  Dado que todos los elementos de $X$ son positivos, $X$ es un subconjunto de $\mathbb Z$ acotado inferiormente ($0$ es cota inferior). Por el axioma del buen orden (\textbf{I12}) resulta que $X$ tiene un elemento mínimo, que llamaremos $a_0$, y cumple
+La  suposición que hicimos implica que $X$ es no vacío.  Dado que todos los elementos de $X$ son positivos, $X$ es un subconjunto de $\mathbb Z$ acotado inferiormente ($0$ es cota inferior). Por el axioma del buen orden\ref{axioma-i12} resulta que $X$ tiene un elemento mínimo, que llamaremos $a_0$, y cumple
 $$
 0<a_0<1. 
 $$
-Usamos ahora la compatibilidad del  producto con  la relación de orden (\textbf{I11}):  por un lado multiplicamos por $a_0$ la desigualdad $0<a_0$ y obtenemos $0<a_0^2$,  y por otro lado multiplicamos por $a_0$ la desigualdad $a_0<1$ y obtenemos $a_0^2<a_0$. Es decir
+Usamos ahora la compatibilidad del  producto con  la relación de orden \ref{axioma-i11}:  por un lado multiplicamos por $a_0$ la desigualdad $0<a_0$ y obtenemos $0<a_0^2$,  y por otro lado multiplicamos por $a_0$ la desigualdad $a_0<1$ y obtenemos $a_0^2<a_0$. Es decir
 $$
  0<a_0^2<a_0<1.
 $$
@@ -314,7 +315,7 @@ La desigualdad $0<a_0^2<1$ dice que $a_0^2\in X$ pero la desigualdad $a_0^2<a_0$
         \item $X =\{x \in \mathbb Z | x=2y \text{\ para algún } y \in \mathbb Z\}.$
         \item $X =\{x \in \mathbb Z | x\le 100\,x\} .$
     \end{enumerate}
-    \item Un subconjunto $Y$ de $Z$ se dice que tiene una {\em cota superior}\index{cota superior} $c$ si $c\ge y$ para todo $y \in Y$.  Una cota superior que además es un elemento de $Y$ es llamada el {\em máximo} de $Y$. Usar el axioma (\textbf{I12}) para demostrar que si $Y$ es no vacío y tiene una cota superior, entonces tiene máximo. [Ayuda: aplicar el axioma al conjunto cuyos elementos son $-y$ ($y \in Y$).]
+    \item Un subconjunto $Y$ de $Z$ se dice que tiene una {\em cota superior}\index{cota superior} $c$ si $c\ge y$ para todo $y \in Y$.  Una cota superior que además es un elemento de $Y$ es llamada el {\em máximo} de $Y$. Usar el axioma \ref{axioma-i12} para demostrar que si $Y$ es no vacío y tiene una cota superior, entonces tiene máximo. [Ayuda: aplicar el axioma al conjunto cuyos elementos son $-y$ ($y \in Y$).]
 
     \item Los enteros $n$ que satisfacen $1 \le n \le 25$ están acomodados en forma arbitraria en un arreglo cuadrado de cinco filas y cinco columnas. Se selecciona el máximo  de cada fila, y se denota $s$ al mínimo entre ellos. De manera similar, el mínimo de cada columna es seleccionado y $t$ denota al máximo entre ellos. Demostrar que $s\ge t$ y de un ejemplo en el cual $s\not=t$.
 \end{enumex}
@@ -341,7 +342,7 @@ $$
 $$
 Esta la forma más usada en la práctica.
 
-Nuestro primer uso del axioma del buen orden será para justificar un procedimiento muy usual. Frecuentemente encontramos una expresión de la forma $u_n$, donde $n$ indica cualquier entero positivo: por ejemplo, podríamos tener $u_n=3n+2$, o $u_n = (n+1)(n+2)(n+3)$. En estos ejemplos $u_n$ es dado por una fórmula explícita y no existe dificultad en explicar como calcular $u_n$ cuando se nos da un valor específico para $n$. Sin embargo en muchos casos no conocemos una fórmula para $u_n$; es más, nuestro problema puede ser encontrarla. En estos casos pueden darnos ciertos valores de $u_n$ para enteros positivos $n$ peque\~nos, y una relación entre el $u_n$ general y algunos de los $u_r$ con $r<n$. Por ejemplo, supongamos nos es dado 
+Nuestro primer uso del axioma del buen orden será para justificar un procedimiento muy usual. Frecuentemente encontramos una expresión de la forma $u_n$, donde $n$ indica cualquier entero positivo: por ejemplo, podríamos tener $u_n=3n+2$, o $u_n = (n+1)(n+2)(n+3)$. En estos ejemplos $u_n$ es dado por una fórmula explícita y no existe dificultad en calcular $u_n$ cuando se nos da un valor específico para $n$. Sin embargo en muchos casos no conocemos una fórmula para $u_n$; es más, nuestro problema puede ser encontrarla. En estos casos pueden darnos ciertos valores de $u_n$ para enteros positivos $n$ peque\~nos, y una relación entre el $u_n$ general y algunos de los $u_r$ con $r<n$. Por ejemplo, supongamos nos es dado 
 $$ 
 u_1=1, \qquad u_2=2, \qquad u_n =u_{n-1} +u_{n-2}, \qquad n\ge 3.
 $$
@@ -446,7 +447,9 @@ $$
 $$
 Por lo tanto si el resultado es correcto cuando $n=k$, entonces lo es cuando $n=k+1$. Se comienza observando que si es correcto cuando $n=1$, debe ser por lo tanto correcto cuando $n=2$. Con el mismo argumento como es correcto cuando $n=2$ debe serlo cuando $n=3$. Continuando de esta forma veremos que es correcto para todos los enteros positivos $n$.
 
-La esencia de este argumento es comúnmente llamada \textit{principio de inducción}. Es una técnica poderosa, fácil de aplicar y la aplicaremos frecuentemente. Pero primero debemos examinar sus bases lógicas y para hacerlo necesitamos una formulación más general. Con $S$ denotemos al subconjunto de $\mathbb N$ para el cual el resultado es correcto: por supuesto, nuestra intención es probar que $S$ es todo $\mathbb N$. El primer paso es probar que $1$ pertenece a $S$, y luego demostraremos que si $k$ pertenece a $S$, también $k+1$. Entonces lo pensamos paso a paso, un procedimiento infinito, y concluimos que $S=\mathbb N$. Afortunadamente el pensarlo paso a paso no es esencial debido a que el principio de inducción es consecuencia de los axiomas que elegimos tan cuidadosamente para $\mathbb Z$ y $\mathbb N$. Más específicamente es consecuencia del axioma del buen orden.
+La esencia de este argumento es comúnmente llamada \textit{principio de inducción}. Es una técnica poderosa, fácil de aplicar y la aplicaremos frecuentemente. Pero primero debemos examinar sus bases lógicas y para hacerlo necesitamos una formulación más general. 
+
+Supongamos que queremos demostrar que un resultado es verdadero para todo $n \in \mathbb N$. Con $S$ denotemos al subconjunto de $\mathbb N$ para el cual el resultado es correcto: por supuesto, nuestra intención es probar que $S$ es todo $\mathbb N$. El primer paso es probar que $1$ pertenece a $S$, y luego demostraremos que si $k$ pertenece a $S$, también $k+1$. Entonces lo pensamos paso a paso, un procedimiento infinito, y concluimos que $S=\mathbb N$. Afortunadamente el pensarlo paso a paso no es esencial debido a que el principio de inducción es consecuencia de los axiomas que elegimos tan cuidadosamente para $\mathbb Z$ y $\mathbb N$. Más específicamente es consecuencia del axioma del buen orden.
 
 \begin{teorema}[Principio de inducción]\label{teorema-principio-de-induccion} Supongamos que $S$ es un subconjunto de $\mathbb N$ que satisface las condiciones \index{principio de inducción}
 \begin{enumerate}[label=\textit{\alph*)}]
