--- a/2021-1/apunte/Cap.01.tex
+++ b/2021-1/apunte/Cap.01.tex
@@ -83,7 +83,7 @@ para todo $a$ de $\mathbb Z$.  Entonces $0= 0'$.
 \end{proof}
 
 
-El ejemplo anterior nos demuestra que hay un único elemento elemento que cumple el axioma \ref{axioma-i4} en lo que respecta a la suma. A este elemento lo denotamos $0$ y lo denominamos el {\em elemento neutro de la suma}. Lo mismo podemos probar con el elemento neutro respecto al producto (ver ejercicio \ref{ej-elem-neutro-prod}),  es decir hay un único elemento,  denotado 1, que satisface el axioma \ref{axioma-i4} en lo que se refiere al producto. A  este elemento lo llamamos el {\em elemento neutro del producto}.  
+El ejemplo anterior nos demuestra que hay un único elemento elemento que cumple el axioma \ref{axioma-i4} en lo que respecta a la suma. A este elemento lo denotamos $0$ y lo denominamos el {\em elemento neutro de la suma}. Lo mismo podemos probar con el elemento neutro respecto al producto (ver ejercicio \ref{ej-elem-neutro-prod}),  es decir hay un único elemento,  denotado $1$, que satisface el axioma \ref{axioma-i4} en lo que se refiere al producto. A  este elemento lo llamamos el {\em elemento neutro del producto}.  
 
 \begin{ejemplo*} (Regla de los signos) Veamos que  si $a,b \in \mathbb Z$ entonces
 $$
@@ -125,7 +125,7 @@ $$\begin{aligned}
 Luego $0x =0x+0x$. Sumando $-0x$ a ambos miembros de la igualdad, obtenemos 
 $$\begin{aligned}
 0x +(-0x) &= 0x+0x+(-0x) &\qquad &\mbox{(usando lógica formal)}\\  
-0 &= 0x+0 &\qquad &\mbox{axioma (.....), 2 veces}\\  
+0 &= 0x+0 &\qquad &\mbox{axioma (.....), dos veces}\\  
 0 &=0x. &\qquad &\mbox{axioma (.....)}
 \end{aligned}$$
 \end{enumex}
