--- a/2021-1/apunte/apunte.tex
+++ b/2021-1/apunte/apunte.tex
@@ -1,4 +1,5 @@
 % PDFLaTeX
+% Otro formato del apunte
 \documentclass[a4paper,12pt,twoside,spanish,reqno]{amsbook}
 %%%---------------------------------------------------
 
