--- a/2021-1/beamer/C02_md1.tex
+++ b/2021-1/beamer/C02_md1.tex
@@ -1,6 +1,9 @@
-%\documentclass{beamer} 
-\documentclass[handout]{beamer} % sin pausas
+\documentclass{beamer} 
+%\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
+
+
+\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -42,7 +45,6 @@
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 \setbeamertemplate{itemize item}{$\circ$}
 \setbeamertemplate{enumerate items}[default]
 \definecolor{links}{HTML}{2A1B81}
@@ -213,7 +215,7 @@ La demostración pueden verla en el apunte (proposición 1.2.1).
 
 \vskip 0.5cm
 
-Usando  esta proposición y la definición  de $>$, $\le$, $\ge$ podemos hacer más variantes del  axioma (\textbf{I11}) ($16$ en total). Todas ellas bastante obvias.
+Usando  esta proposición y la definición  de $>$, $\le$, $\ge$ podemos hacer más variantes del  axioma (\textbf{I11}) (¡$16$ en total!). Todas ellas bastante obvias.
 
 
 \end{frame}
