--- a/2021-1/beamer/C03_md1.tex
+++ b/2021-1/beamer/C03_md1.tex
@@ -1,6 +1,8 @@
-%\documentclass{beamer} 
-\documentclass[handout]{beamer} % sin pausas
+\documentclass{beamer} 
+%\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
+
+\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -42,7 +44,7 @@
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+
 \setbeamertemplate{itemize item}{$\circ$}
 \setbeamertemplate{enumerate items}[default]
 \definecolor{links}{HTML}{2A1B81}
