--- a/2021-1/beamer/C04_md1.tex
+++ b/2021-1/beamer/C04_md1.tex
@@ -1,6 +1,8 @@
-%\documentclass{beamer} 
-\documentclass[handout]{beamer} % sin pausas
+\documentclass{beamer} 
+%\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
+
+\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
